# MBMedia

./: .gitignore  Atm.webm  Bruh.txt  CMakeLists.txt  ContainerMuxing.cpp  ContainerMuxing.h  DoNothing.h  FFMPEGDocExample_Transcode.cpp  MBAudioDefinitions.h  MBAudioUtility.cpp  MBAudioUtility.h  MBMedia.cpp  MBMedia.h  MBMedia2.cpp  MBMedia2.h  MBMediaDefinitions.h  MBMediaInternals.cpp  MBMediaInternals.h  MBMediaTest.cpp  MBPM_FileInfo  MBPM_PacketInfo  MBVideoDefinitions.h  MBVideoUtility.h  Notes.txt  PixelFormats.h  Temp.txt  _MBMedia.cpp  leandromoreira_Transcode.cpp
ProjectDiary/: 2021-12-15.md  2021-12-22.md  2021-12-27.md  2021-12-28.md  2022-01-03.md
